<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B262C"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context="com.example.QuazarApp.QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="151dp"
            android:paddingTop="10dp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:paddingTop="10dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="24sp" />

<!--        <Button-->
<!--            android:id="@+id/quit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom|end"-->
<!--            android:layout_marginBottom="24dp"-->
<!--            android:paddingEnd="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:text="@string/quit"-->
<!--            android:textColor="#fff"-->
<!--            app:backgroundTint="#3282B8" />-->
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="476dp"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/name_this_location"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/choice1"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/everest"
            android:textColor="#fff"
            app:backgroundTint="#3282B8" />

        <Space
            android:layout_width="20dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/choice2"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/moon_world"
            android:textColor="#fff"
            app:backgroundTint="#3282B8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/choice3"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/yellow_stone"
            android:textColor="#fff"
            app:backgroundTint="#3282B8" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/choice4"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="disney land"
            android:textColor="#fff"
            app:backgroundTint="#3282B8" />
    </LinearLayout>
</LinearLayout>